MB-42016: Increase detail in DroppedCollections exceptions

MB shows a throw from Manifest::DroppedCollections::remove,
yet the logging and debugger backtrace don't quite make sense.

Include a dump of the Manifest in the exception to see if we
can solve the issue with a reproduction.

Change-Id: Ia8f6a51c7e79b4a2793435c0a3248b9f16e8f097
Reviewed-on: http://review.couchbase.org/c/kv_engine/+/138086
Reviewed-by: Trond Norbye <trond.norbye@couchbase.com>
Tested-by: Jim Walker <jim@couchbase.com>